# RAG-Assessment

./: .env  main.py  pyproject.toml  requirements.txt
backend/: config.py  db.py  main.py  pipeline.py
frontend/: streamlit_app.py
